hasegawaからのコミット１

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
         <title>test</title>
         <meta charset="UTF-8"> 
     </head>
-    <body>practice</body>
+    <body>
+        <h1>これはテストです</h1>
+        <div>追加</div>
+    </body>
 </html>
