--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
         <title>test</title>
         <meta charset="UTF-8"> 
     </head>
-    <body>practice</body>
+    <body>practice
+        <h1>TEST</h1>
+    </body>
 </html>
